test/fail/compound_field_immutable.zn
# ERRORS: 3
# Compound assignment on immutable fields and let-bound struct fields

struct Point {
    let x: int
    var y: int
}

class Color {
    let r: int
}

func main() {
    var p = Point(x: 1, y: 2)
    p.x += 5
    let q = Point(x: 3, y: 4)
    q.y += 10
    var c = Color(r: 255)
    c.r -= 1
    0
}
